# dvc-pipeline-demo

./: .dvcignore  .gitignore  dvc.yaml  params.yaml  pyproject.toml
.dvc/: config
.github/workflows/: train.yaml
data/: raw.dvc
src/dvc_pipeline_demo/: __init__.py  data.py  evaluate.py  metrics.py  model_arch.py  preprocess.py  train.py
