[project]
name = "dvc-pipeline-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "aapryimak", email = "pryimakaa@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "dvc[s3]>=3.67.1",
    "click>=8.2.1",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pillow>=11.2.1",
    "seaborn>=0.13.2",
    "torchinfo>=1.8.0",
    "mlflow>=2.17.0",
    "python-dotenv>=1.1.1",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "torchaudio>=2.11.0",
    "databricks-cli>=0.18.0",
]

[project.scripts]
dvc-pipeline-demo = "dvc_pipeline_demo:main"

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu128"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
